fixed spacing on all the big boxes

--- a/src/components/Characters/Characters.css
+++ b/src/components/Characters/Characters.css
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  height: 75%;
+  height: 74%;
   width: 95%;
   /* border: 3px solid black; */
   justify-content: center;
