--- a/src/components/Inventory/inventory.css
+++ b/src/components/Inventory/inventory.css
@@ -20,7 +20,7 @@
   scroll-margin: 0px;
   scroll-padding: 0px;
   scroll-snap-type: y mandatory;
-  height: 75%;
+  height: 71.3%;
   width: 95%;
   column-gap: 50px;
   row-gap: 40px;
