--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    height: 75%;
+    height: 73.8%;
     width: 95%;
     border: 3px solid black;
     justify-content: center;
